--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,31 +1,27 @@
-name: Selenium Java CI
+name: Java CI with Maven
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-permissions:
-  id-token: write
-  contents: read
-  checks: write
+
 jobs:
-  e2e:
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-          cache: maven
-      - name: Test
-        run: mvn clean test
-      - name: Report
-        uses: dorny/test-reporter@v1
-        if: success() || failure()
-        with:
-          name: Test Results
-          path: ${{ github.workspace }}/target/surefire-reports/TEST-*.xml
-          reporter: java-junit
+    - uses: actions/checkout@v4
+    - name: Set up JDK 21
+      uses: actions/setup-java@v3
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
+    - name: Report
+      run: allure serve
+
+
